--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ a {
     background: #111;
     color: #eee;
     height: 80px;
-    position: fixed;
+    position: absolute;
 }
 
 #navbar-container {
